--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -91,7 +91,7 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	<!-- Activiti -->
+	<!-- Activiti 
 	<servlet>
 		<servlet-name>RestletServlet</servlet-name>
 		<servlet-class>org.restlet.ext.servlet.ServerServlet</servlet-class>
@@ -104,7 +104,7 @@
 		<servlet-name>RestletServlet</servlet-name>
 		<url-pattern>/act/rest/service/*</url-pattern>
 	</servlet-mapping>
-
+   -->
 	<!-- DruidStatView -->
 	<servlet>
 		<servlet-name>DruidStatView</servlet-name>
@@ -178,7 +178,7 @@
 		<url-pattern>/servlet/validateCodeServlet</url-pattern>
 	</servlet-mapping>
 	
-	<!-- FineReport -->
+	<!-- FineReport
 	<servlet>
 		<servlet-name>ReportServer</servlet-name>
 		<servlet-class>com.fr.web.ReportServlet</servlet-class>
@@ -187,7 +187,7 @@
 		<servlet-name>ReportServer</servlet-name>
 		<url-pattern>/ReportServer</url-pattern>
 	</servlet-mapping>
-	
+	 -->
 	<!-- [INSERT FRAGMENT HERE] -->
 
 	<!-- Session configure, to "fj.properties" file "session.sessionTimeout" parameter.
