--- a/src/main/resources/fj.properties
+++ b/src/main/resources/fj.properties
@@ -53,6 +53,8 @@ adminPath=/a
 
 #all user can visit path
 shopPath=/chuzu
+#\u8d44\u6e90\u83b7\u53d6
+restPath=/res
 
 #\u524d\u7aef\u57fa\u7840\u8def\u5f84
 frontPath=/f
